--- a/Registros/Registros.csproj
+++ b/Registros/Registros.csproj
@@ -180,7 +180,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\ProyectV1 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\ProyectoFinalAp - Web Deploy.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
