BLL empleados agregada

--- a/Registros/Registros.csproj
+++ b/Registros/Registros.csproj
@@ -150,6 +150,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BLL\ClientesBLL.cs" />
+    <Compile Include="BLL\EmpleadosBLL.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\EmpleadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
