--- a/Registros/Registros.csproj
+++ b/Registros/Registros.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BLL\ClientesBLL.cs" />
     <Compile Include="BLL\EmpleadosBLL.cs" />
+    <Compile Include="Controllers\CitasController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\EmpleadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -162,10 +163,14 @@
     <Compile Include="Migrations\201705141227047_InitialCreate.Designer.cs">
       <DependentUpon>201705141227047_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705182000110_BeautyBaseDb.cs" />
+    <Compile Include="Migrations\201705182000110_BeautyBaseDb.Designer.cs">
+      <DependentUpon>201705182000110_BeautyBaseDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Citas.cs" />
     <Compile Include="Models\Clientes.cs" />
     <Compile Include="Models\Empleados.cs" />
-    <Compile Include="Models\Provincias.cs" />
     <Compile Include="Models\Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -229,6 +234,11 @@
     <Content Include="Views\Clientes\Details.cshtml" />
     <Content Include="Views\Clientes\Edit.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Citas\Create.cshtml" />
+    <Content Include="Views\Citas\Delete.cshtml" />
+    <Content Include="Views\Citas\Details.cshtml" />
+    <Content Include="Views\Citas\Edit.cshtml" />
+    <Content Include="Views\Citas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -251,6 +261,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705141227047_InitialCreate.resx">
       <DependentUpon>201705141227047_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705182000110_BeautyBaseDb.resx">
+      <DependentUpon>201705182000110_BeautyBaseDb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
